# markdown-link-auditor

./: .gitignore  .markdown-link-auditor-ignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  feature_request.md  rule_proposal.md
.github/workflows/: ci.yml
docs/: anchor-slugs.md  design.md  overview.md  release-checklist.md  report-format.md  rules.md  security-and-privacy.md
examples/: README.md
examples/bad-docs/: README.md
examples/bad-docs/docs/: duplicate-headings.md  overview.md
examples/good-docs/: README.md
examples/good-docs/assets/: logo.txt
examples/good-docs/docs/: overview.md  usage.md
markdown_link_auditor/: __init__.py  anchors.py  auditor.py  cli.py  models.py  parser.py  reporters.py
tests/: test_anchors.py  test_auditor.py  test_cli.py  test_parser.py  test_paths.py  test_redaction.py  test_report.py  test_rules.py
