[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-link-auditor"
version = "0.1.0"
description = "Local-first Markdown link, image, and anchor auditor."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "s23asd321-del" }
]
keywords = ["markdown", "links", "anchors", "cli", "documentation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
markdown-link-audit = "markdown_link_auditor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["markdown_link_auditor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
